fix filemanager items overflow

--- a/public/backend/css/files.css
+++ b/public/backend/css/files.css
@@ -216,6 +216,7 @@
     -moz-transition: width 0.4s, height 0.4s;
     -o-transition: width 0.4s, height 0.4s;
     transition: width 0.4s, height 0.4s;
+    overflow-x: hidden;
 }
 
 .file-item button{
